@@ -69,7 +69,7 @@ my $build = $class->new(
         'Plack::App::File'             => 0,
         'Plack::Middleware::JSONP'     => 0,
         'Plack::Builder'               => 0,
-        'Text::Markup'                 => '0.15',
+        'Text::Markup'                 => '0.33',
         'URI::Template'                => '0.16',
         'XML::LibXML'                  => '1.70',
     },
