@@ -10,6 +10,7 @@ use File::Copy::Recursive qw(fcopy dircopy);
 use File::Basename;
 use Text::Markup;
 use Text::Markup::CommonMark;
+use Text::Markup::None qr/te?xt/;
 use XML::LibXML;
 use List::Util qw(first);
 use List::MoreUtils qw(uniq);
